# pet_project_smart_vocabulary

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
api/: api.py
data_loader/: load.py
reader/: reader.py
text_preprocessing/: preprocessing.py
text_processing/: processing.py
translation_summary/: mbart.py  translation.py
ui/: home.py
ui/pages/: results.py  vocabulary.py
vocabulary/: app.py  filter_known_words.py  vocabulary.py
vocabulary/test/: test_vocabulary.py
words_context/: context.py
