[project]
name = "pet-project-smart-vocabulary"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langid",
    "beautifulsoup4>=4.13.5",
    "deep-translator>=1.11.4",
    "ebooklib>=0.19",
    "elasticsearch==8.13.0",
    "fastapi>=0.116.2",
    "googletrans>=4.0.2",
    "ipywidgets>=8.1.7",
    "langdetect>=1.0.9",
    "mlflow>=3.4.0",
    "nltk>=3.9.1",
    "numpy>=2.3.3",
    "openai>=1.107.3",
    "pandas>=2.3.2",
    "pymupdf>=1.26.4",
    "qdrant-client[fastembed]>=1.14.2",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "sentencepiece>=0.2.1",
    "spacy>=3.8.7",
    "streamlit>=1.49.1",
    "tqdm>=4.67.1",
    "transformers>=4.56.1",
    "uvicorn>=0.35.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "torchaudio>=2.8.0",
    "accelerate>=1.10.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ipykernel>=6.30.1",
    "pytest>=8.4.2",
]
